scripts/nullaway/annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8.txt
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VFrame.java:7: error: [NullAway] assigning @Nullable expression to @NonNull field
    VStack _stack = null;
           ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VFrame.java:63: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return _parent;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:46: error: [NullAway] dereferenced expression now is @Nullable
        return now.link == null;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:54: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return now.data;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/VStack.java:54: error: [NullAway] dereferenced expression now is @Nullable
        return now.data;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Cmd.java:13: error: [NullAway] method returns @Nullable, but superclass method v.Quote.tokens() returns @NonNull
    @Nullable public TokenStream tokens() {
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/ConsoleCharStream.java:34: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return _reader;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/ConsoleCharStream.java:39: error: [NullAway] dereferenced expression _lexer is @Nullable
            if (_lexer.closed())
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Lexer.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
    public CharStream _stream = null;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Lexer.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
        _stream = q;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/QuoteStream.java:7: error: [NullAway] assigning @Nullable expression to @NonNull field
    List<Term> _terms = null;
               ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/BuffCharStream.java:43: error: [NullAway] dereferenced expression reader() is @Nullable
            i = reader().read();
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/CmdQuote.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
    TokenStream _tokens = null;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Prologue.java:143: error: [NullAway] dereferenced expression lastelem is @Nullable
                                        evaltmpl(tmplterm.qvalue().tokens(), lastelem.qvalue().tokens(), symbols);
                                                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Prologue.java:146: error: [NullAway] dereferenced expression lastelem is @Nullable
                                        if (tmplterm.value().equals(lastelem.value()))
                                                                            ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/QuoteIterator.java:5: error: [NullAway] assigning @Nullable expression to @NonNull field
    QuoteStream _qs = null;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/LexIterator.java:6: error: [NullAway] assigning @Nullable expression to @NonNull field
    Lexer _lex = null;
          ^
    (see http://t.uber.com/nullaway )
../annotator/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/LexIterator.java:33: error: [NullAway] dereferenced expression t is @Nullable
        if (t.type == Type.TOpen)
             ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
18 errors
